Update and rename index.php to obf.html

--- a/obf.html
+++ b/obf.html
@@ -88,12 +88,12 @@ input#file {
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link rel="icon" href="favicon.ico">
-<title>Batch file obfuscator ❤️</title>
+<title>Batch file obfuscator charly</title>
 
 
 <body>
 
-	<span class="version">v1.7 stable</span>
+	<span class="version">da velrio charly</span>
 
 	<br>
 	<br>
